--- a/[research/TestProject/templates/admin.html
+++ b/[research/TestProject/templates/admin.html
@@ -8,7 +8,7 @@ c &ltname&gt - create intent &ltname&gt
 d &ltname&gt - delete intent &ltname&gt
 u &ltname&gt - update intent &ltname&gt
 g &ltname&gt - describe intent &ltname&gt        
-l - list intents
+l - list questions
 li - list intents
 lw - list workspaces
 uw - change workspace
