--- a/[research/TestProject/templates/test_form.html
+++ b/[research/TestProject/templates/test_form.html
@@ -53,6 +53,7 @@ Username: {{p.name}}
 {% if p.state > 0 %}
 Last answer: {{ p.reply }}
 {% endif %}
+{{p.intentdes}}
             </pre>
         {% endif %}
    </body>
