--- a/[research/TestProject/templates/admin.html
+++ b/[research/TestProject/templates/admin.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html>
     <body>
-        <h1> Manage Watson Assistant environment</h1>
+    <img src="https://image.freepik.com/vetores-gratis/modelo-de-etiqueta-para-a-ciencia-das-palavras_1308-5888.jpg" height=200 width=500 >
+        <h1>Sciencer AI Management</h1>
         <p> Options:
         <pre>
 c &ltname&gt - create intent &ltname&gt
