--- a/[research/TestProject/templates/test_form.html
+++ b/[research/TestProject/templates/test_form.html
@@ -40,7 +40,7 @@ Answers: {{p.score}}
 
         {% else %}
             <!--Question page-->
-            <img src="https://steemitimages.com/DQmazeisMMzLsezVDVvxoHythfiGpWQU4bKierPfd2ogs7i/science-03.png" width=200 hight=200>
+            <img src="https://image.freepik.com/vetores-gratis/modelo-de-etiqueta-para-a-ciencia-das-palavras_1308-5888.jpg" height=200 width=500 >
             <h1> Answer this question: </h1>
             <br>
             <form method="post"> {{p.question}} <br>
