--- a/[research/TestProject/templates/admin.html
+++ b/[research/TestProject/templates/admin.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <body>
-    <img src="https://image.freepik.com/vetores-gratis/modelo-de-etiqueta-para-a-ciencia-das-palavras_1308-5888.jpg" height=200 width=500 >
+    <img src="https://tbncdn.freelogodesign.org/0ae77861-eda1-4d03-b8a1-e89225d49856.png?1531546750044" height=200>
         <h1>Sciencer AI Management</h1>
         <p> Options:
         <pre>
