--- a/[research/TestProject/templates/admin.html
+++ b/[research/TestProject/templates/admin.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <body>
-    <img src="https://image.freepik.com/vetores-gratis/modelo-de-etiqueta-para-a-ciencia-das-palavras_1308-5888.jpg" height=200 width=500 >
+    <img src="https://drive.google.com/uc?id=13y2-r4XYya8IipTTdeB94s8mzQzF_xsQ" height=200 >
         <h1>Sciencer AI Management</h1>
         <p> Options:
         <pre>
