--- a/[research/TestProject/templates/test_form2.html
+++ b/[research/TestProject/templates/test_form2.html
@@ -45,7 +45,7 @@ Answers: {{p.score}}
             <br>
             <form method="post"> {{p.question}} <br>
             <br>
-            <img src={{p.picture}}>
+            <img src={{p.pic}}>
             <br>
             <input type="text" name="query">
             </form>
