input files in the new format

--- a/[research/TestProject/templates/test_form.html
+++ b/[research/TestProject/templates/test_form.html
@@ -49,6 +49,7 @@ Answers: {{p.score}}
             <img src="https://image.freepik.com/vetores-gratis/modelo-de-etiqueta-para-a-ciencia-das-palavras_1308-5888.jpg" height=200 width=500 >
             <h1> Answer this question: </h1>
             <br>
+            <img src={{p.img}} height=200 width=500 >
             <form method="post"> {{p.question}} <br>
             <input type="text" name="query">
             </form>
